# sbsigntool_osx

./: AUTHORS  ChangeLog  Makefile  Makefile.in  OSXConf.sh  README.md  aclocal.m4  clover-cert.siglist  config.h  config.h.in  config.status  configure  missing  sbsigntool.pkg  test.siglist  test.siglist.sec
Asus_FW_Mod/: Asus AMI Aptio UEFI GUID's.rtf  firmware-ALL-SigL.siglist  firmware-KEK-SRel_Info.txt  firmware-PK-SRel_Info.txt  firmware-cert.der  firmware-cert.pem  firmware-db-SRel_Info.txt  firmware-key.rsa
OpenSSL101j-52/: Unit Tests-Info.plist
OpenSSL101j-52/openssl.xcodeproj/: project.pbxproj
OpenSSL101j-52/src/: Payload
autom4te.cache/: output.0  traces.0
docs/: Makefile  Makefile.in
lib/ccan/: Makefile  Makefile.am  Makefile.in
lib/ccan/.deps/: debug.Po  failtest.Po  hash.Po  htable.Po  list.Po  read_write_all.Po  str.Po  talloc.Po  time.Po
src/: Base.h  Makefile  Makefile.in  ProcessorBind.h  Signing.der  Signing.der.signed  bioskeydump  bioskeydump.c  efivars.h  fileio.h  idc.c  sbattach  sbkeysync  sbkeysync.c  sbsiglist  sbsiglist.c  sbsign  sbsign.c  sbvarsign  sbvarsign.c  sbverify
src/.deps/: sbattach-fileio.Po  sbattach-idc.Po  sbattach-image.Po  sbattach-sbattach.Po  sbkeysync-fileio.Po  sbkeysync-idc.Po  sbkeysync-image.Po  sbkeysync-sbkeysync.Po  sbsiglist-fileio.Po  sbsiglist-idc.Po  sbsiglist-image.Po  sbsiglist-sbsiglist.Po  sbsign-fileio.Po  sbsign-idc.Po  sbsign-image.Po  sbsign-sbsign.Po  sbvarsign-fileio.Po  sbvarsign-idc.Po  sbvarsign-image.Po  sbvarsign-sbvarsign.Po  sbvarsign.Po  (+4 more)
tests/: Makefile  Makefile.in
(+79 files in other folders)
