noinst_LIBRARIES = libccan.a
libccan_a_SOURCES = \
	ccan/typesafe_cb/typesafe_cb.h \
	ccan/tlist/tlist.h \
	ccan/time/time.h \
	ccan/time/time.c \
	ccan/tcon/tcon.h \
	ccan/talloc/talloc.h \
	ccan/talloc/talloc.c \
	ccan/str/str.h \
	ccan/str/str_debug.h \
	ccan/str/str.c \
	ccan/str/debug.c \
	ccan/read_write_all/read_write_all.h \
	ccan/read_write_all/read_write_all.c \
	ccan/list/list.h \
	ccan/list/list.c \
	ccan/htable/htable_type.h \
	ccan/htable/htable.h \
	ccan/htable/htable.c \
	ccan/hash/hash.h \
	ccan/hash/hash.c \
	ccan/failtest/failtest_undo.h \
	ccan/failtest/failtest_proto.h \
	ccan/failtest/failtest_override.h \
	ccan/failtest/failtest.h \
	ccan/failtest/failtest.c \
	ccan/container_of/container_of.h \
	ccan/compiler/compiler.h \
	ccan/check_type/check_type.h \
	ccan/build_assert/build_assert.h \
	ccan/array_size/array_size.h
